--- a/workspace/html/index.html
+++ b/workspace/html/index.html
@@ -2,6 +2,7 @@
 <div class="wrapper page_main">
 	@@include('../include/header.html')
 	<div class="container_wrap">
+		<div class="slide_box">
 		<div id="visual_slider" class="slider">
 			<div class="slider-item">
 				<a href="">
@@ -66,6 +67,7 @@
 					</div>
 				</a>
 			</div>
+		</div>
 		</div>
 	</div>
 	@@include('../include/navigation.html')
