--- a/workspace/html/sub_workplace.html
+++ b/workspace/html/sub_workplace.html
@@ -22,39 +22,40 @@
 					<ul>
 						<li class="item">
 							<div class="thumbnail">
-								<img src="./assets/images/banner/tab_cont_1.jpg" class="img" />
+								<img src="./assets/images/banner/tab_cont_1.jpg"/>
 							</div>
-							자치단체
+							<!-- 타이틀이 길어지면 리스트가 깨져서 말줄임표 추가를 위해 수정 -->
+							<div class="title">자치단체자치단체자치단체자치단체자치단체자치단체자치단체자치단체</div>
 						</li>
 						<li class="item">
 							<div class="thumbnail">
-								<img src="./assets/images/banner/tab_cont_2.jpg" class="img" />
+								<img src="./assets/images/banner/tab_cont_2.jpg" />
 							</div>
-							공공기관
+							<div class="title">공공기관</div>
 						</li>
 						<li class="item">
 							<div class="thumbnail">
-								<img src="./assets/images/banner/tab_cont_3.jpg" class="img" />
+								<img src="./assets/images/banner/tab_cont_3.jpg"/>
 							</div>
-							마을단체
+							<div class="title">마을단체</div>
 						</li>
 						<li class="item">
 							<div class="thumbnail">
-								<img src="./assets/images/banner/tab_cont_4.jpg" class="img" />
+								<img src="./assets/images/banner/tab_cont_4.jpg"/>
 							</div>
-							협회단체
+							<div class="title">협회단체</div>
 						</li>
 						<li class="item">
 							<div class="thumbnail">
-								<img src="./assets/images/banner/tab_cont_5.jpg" class="img" />
+								<img src="./assets/images/banner/tab_cont_5.jpg"/>
 							</div>
-							일반단체
+							<div class="title">일반단체</div>
 						</li>
 						<li class="item">
 							<div class="thumbnail">
-								<img src="./assets/images/banner/tab_cont_6.jpg" class="img" />
+								<img src="./assets/images/banner/tab_cont_6.jpg"/>
 							</div>
-							기타
+							<div class="title">기타</div>
 						</li>
 					</ul>
 				</div>
