관리자 답글 영역 추가

--- a/workspace/html/comments.html
+++ b/workspace/html/comments.html
@@ -28,6 +28,21 @@
 
           <p class="comment">회원들의 댓글 달기 시스템 테스트중입니다.</p>
 
+          <!-- 관리자 답글 영역 -->
+          <div class="btn_wrap">
+            <button type="button" class="btn_comment">관리자 답글</button>
+          </div>
+
+          <div class="comment_write active">
+            <p class="user_id">userid</p>
+            <textarea name="" id="" placeholder="답글을 입력해주세요"></textarea>
+            <div class="comment_write__bottom">
+              0 / 3000
+              <button type="button">등록</button>
+            </div>
+          </div>
+          <!-- // 관리자 답글 영역 -->
+
           <div class="sub_comment"><i class="ph-caret-left"></i>관리자가 달수있는 댓글영역입니다.<p class="date">2021.12.09. 07:25</p></div>
         </div>
       </div>
