관리자 답글 삭제 추가 & 마이페이지 댓글 메뉴 추가

--- a/workspace/html/mypage.html
+++ b/workspace/html/mypage.html
@@ -28,6 +28,10 @@
 				<img src="./assets/images/icon/warning-circle-thin.png" alt="" /><br />
 				이용안내
 			</a>
+			<a href="">
+				<img src="./assets/images/icon/comments.png" alt="" /><br />
+				댓글관리
+			</a>
 		</div>
 	</div>
 
