--- a/workspace/html/comments.html
+++ b/workspace/html/comments.html
@@ -43,7 +43,15 @@
           </div>
           <!-- // 관리자 답글 영역 -->
 
-          <div class="sub_comment"><i class="ph-caret-left"></i>관리자가 달수있는 댓글영역입니다.<p class="date">2021.12.09. 07:25</p></div>
+          <div class="sub_comment">
+            <i class="ph-caret-left"></i>관리자가 달수있는 댓글영역입니다.
+            <p class="date">2021.12.09. 07:25</p>
+
+            <button type="button" class="btn_dropdown"><i class="ph-dots-three-vertical"></i></button>
+            <div class="dropdown_list">
+              <button type="button" class="btn_delete">삭제</button>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -53,17 +61,10 @@
     </div>
 
     <script>
-      var isDropdown = $('.dropdown_list');
-
-      $('.btn_dropdown').click(function() {
-        if (isDropdown.hasClass('fade')) {
-          isDropdown.removeClass('fade').addClass('fade_reverse');
-        } else if (isDropdown.hasClass('fade_reverse')) {
-          isDropdown.removeClass('fade_reverse').addClass('fade');
-        } else {
-          isDropdown.addClass('fade');
-        }
+      $('.btn_dropdown').click(function(e) {
+        $(this).next('.dropdown_list').toggleClass('fade');
       });
+
       $('.btn_comment').click(function() {
         $('#admin_comment_box').addClass('active');
       });
